--- a/ClientApp/src/app/cities/cities.component.html
+++ b/ClientApp/src/app/cities/cities.component.html
@@ -1,8 +1,7 @@
 <h1>Cities</h1>
 <p>Here's a list of cities: feel free to play with it.</p>
 <p *ngIf="!cities"><em>Loading...</em></p>
-<table class='table table-striped' aria-labelledby="tableLabel"
-       [hidden]="!cities">
+<table class='table table-striped' aria-labelledby="tableLabel"[hidden]="!cities">
   <thead>
     <tr>
       <th>ID</th>
