--- a/ClientApp/src/app/cities/cities.component.html
+++ b/ClientApp/src/app/cities/cities.component.html
@@ -2,7 +2,7 @@
 <p>Here's a list of cities: feel free to play with it.</p>
 <p *ngIf="!cities"><em>Loading...</em></p>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
+<table mat-table [dataSource]="cities" class="mat-elevation-z8"
        [hidden]="!cities">
   <!-- Id Column -->
   <ng-container matColumnDef="id">
@@ -30,6 +30,7 @@
 
 <!-- Pagination directive -->
 <mat-paginator [hidden]="!cities"
+               (page)="pageEvent = getData($event)"
                [pageSize]="10"
                [pageSizeOptions]="[10, 20, 50]"
                showFirstLastButtons>
