--- a/ClientApp/src/app/cities/cities.component.html
+++ b/ClientApp/src/app/cities/cities.component.html
@@ -2,7 +2,7 @@
 
 <p>Here's a list of cities: feel free to play with it.</p>
 
-<p *ngIf="!cities"><em>Loading...</em></p>
+<p *ngIf="this.id && !city"><em>Loading...</em></p>
 
 <mat-form-field [hidden]="!cities">
   <input matInput (keyup)="loadData($event.target.value)"
