adding some border and shadow

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-
 <!--Top Page-->
 
 <div class="premier">
@@ -26,73 +25,78 @@
   <br>
 </div>
 <!-- Navigation -->
-  
-    <h1  class="center">Projects</h1>
 
-    <div class="row">
-    <div class="column" style="background-color:#aaa;" target="_blank">
-        <h2>Websites</h2>
-       <br>
-       <br>
-        <p> <a href="http://kcafricanmarket.com/" target="_blank">kcafricanmarket.com</a> </p>
-        <p><a href="https://pragmalogy.com/">pragmalogy.com</a></p>
-       
-    </div>
-    <div class="column" style="background-color:#bbb;">
-        <h2>Photography</h2>
-       
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Felementarycreativity%2Fphotos%2Fa.1889899131047030%2F1889902424380034%2F&width=500&show_text=true&height=332&appId" width="100%" height="auto" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-        
-    </div>
-    <div class="column" style="background-color:#ccc;">
-        <h2>Videography</h2>
-        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/1v0u4j51dLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    
-    </div>
+<h1 class="center">Projects</h1>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;" target="_blank">
+    <h2>Websites</h2>
     <br>
-    <div id="services" class="container back2">
-        <div class="middlediv"> 
-            <h1 class="title center">Skills</h1> 
-            <br>
-                <h2>Graphical</h2> 
-                    <p> Photoshop, Illustrator, InDesign, Acrobat, Free Hand, Corel Draw.
-                    </p> 
-                <h2>Web</h2> 
-                    <p>Web. HTML, CSS, Javascript, WordPress, Content Management Systems (CMS).
-                    </p> 
-                <h2>Math</h2> 
-                    <p>Basic math, arithmetic, statistics, algebra, trigonometry, geometry, calculus.
-                    </p> 
-                <h2>Troubleshooting</h2> 
-                    <p> Assessment, system knowledge, analytical skills, testing, calm mindset, problem-solving, logic, critical thinking skills, collaboration, communication.
-                    </p> 
-        </div> 
-        <br>
-    </div>
-    
-    <div class="container2 container">
-        <div id="contact" class="middlediv center"> 
-            <h1 class="title">Social Media</h1> 
-           
-            
-            <a href="https://www.facebook.com/elementarycreativity/?view_public_for=831791130191174" class="fa fa-facebook"></a>
-            
-            <a href="https://www.youtube.com/channel/UCGC1JiQ0Zx2gc17s_X3VfQQ" class="fa fa-youtube"></a>
-            <a href="https://www.instagram.com/kyemofficial/?hl=fr" class="fa fa-instagram"></a>
-            <a href="https://www.linkedin.com/in/magnimdadja/" class="fa fa-linkedin"></a>
-            
-        </div> 
-        <br>
-        <br>
-    </div>
-   
-    
-    
-    <footer>
-    <div class="footer back1">
-        <h2>Design by Dadja Batale </h2>
-      </div>
-    </footer>
-   
+    <br>
+    <p> <a href="http://kcafricanmarket.com/" target="_blank">kcafricanmarket.com</a> </p>
+    <p><a href="https://pragmalogy.com/">pragmalogy.com</a></p>
+
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Photography</h2>
+
+    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Felementarycreativity%2Fphotos%2Fa.1889899131047030%2F1889902424380034%2F&width=500&show_text=true&height=332&appId" width="100%" height="auto" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+  </div>
+  <div class="column" style="background-color:#ccc;">
+    <h2>Videography</h2>
+    <iframe width="100%" height="auto" src="https://www.youtube.com/embed/1v0u4j51dLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+</div>
+<br>
+<div id="services" class="container back2">
+  <div class="middlediv">
+    <h1 class="title center">Skills</h1>
+    <br>
+    <h2>Graphical</h2>
+    <p>
+      Photoshop, Illustrator, InDesign, Acrobat, Free Hand, Corel Draw.
+    </p>
+    <h2>Web</h2>
+    <p>
+      Web. HTML, CSS, Javascript, WordPress, Content Management Systems (CMS).
+    </p>
+    <h2>Math</h2>
+    <p>
+      Basic math, arithmetic, statistics, algebra, trigonometry, geometry, calculus.
+    </p>
+    <h2>Troubleshooting</h2>
+    <p>
+      Assessment, system knowledge, analytical skills, testing, calm mindset, problem-solving, logic, critical thinking skills, collaboration, communication.
+    </p>
+  </div>
+  <br>
+</div>
+<br>
+    <br>
+<div class="container2 container">
+  <div id="contact" class="middlediv center">
+    <h1 class="title">Social Media</h1>
+
+
+    <a href="https://www.facebook.com/elementarycreativity/?view_public_for=831791130191174" class="fa fa-facebook"></a>
+
+    <a href="https://www.youtube.com/channel/UCGC1JiQ0Zx2gc17s_X3VfQQ" class="fa fa-youtube"></a>
+    <a href="https://www.instagram.com/kyemofficial/?hl=fr" class="fa fa-instagram"></a>
+    <a href="https://www.linkedin.com/in/magnimdadja/" class="fa fa-linkedin"></a>
+
+  </div>
+  <br>
+  <br>
+</div>
+<br>
+<br>
+
+<footer>
+  <div class="footer back1">
+    <h2>Design by Dadja Batale </h2>
+  </div>
+</footer>
+
 <app-footer></app-footer>
