--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -31,7 +31,7 @@
   </nav>
   <nav>
     <ul id="home" class="nav">
-      <li><a href="#home">Home</a></li>
+      <li><a href="#home">Intro</a></li>
       <li><a href="#about">About Me</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#contact">Contact</a></li>
