--- a/ClientApp/src/app/cities/cities.component.html
+++ b/ClientApp/src/app/cities/cities.component.html
@@ -18,8 +18,8 @@
 </mat-form-field>
 
 <table mat-table [dataSource]="cities" class="mat-elevation-z8" [hidden]="!cities"
-    matSort (matSortChange)="loadData()"
-    matSortActive="{{defaultSortColumn}}" matSortDirection="{{defaultSortOrder}}">
+       matSort (matSortChange)="loadData()"
+       matSortActive="{{defaultSortColumn}}" matSortDirection="{{defaultSortOrder}}">
 
   <!-- Id Column -->
   <ng-container matColumnDef="id">
@@ -45,6 +45,13 @@
   <ng-container matColumnDef="lon">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Longitude</th>
     <td mat-cell *matCellDef="let city"> {{city.lon}} </td>
+  </ng-container>
+
+
+  <!-- Description Column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+    <td mat-cell *matCellDef="let city">  {{city.description}}  </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
